--- a/draft paper in tex/draft.tex
+++ b/draft paper in tex/draft.tex
@@ -45,60 +45,61 @@ classroom scheduling, binary integer programming, constraint programming, open-s
 
 \section{Introduction}
 
-The efficient allocation of classroom resources has become one of the critical challenges for higher education institutions (HEIs) in developing countries, particularly in the Philippines where rapid enrollment growth outpaces infrastructure development. The College of Computing and Multimedia Studies (CCMS) at Camarines Norte State College exemplifies this problem, experiencing a 15\% annual enrollment growth while operating with limited laboratory facilities—specifically, only nine rooms in the new three-floor building and three laboratories in the old building.
+Higher Education Institutions (HEIs) in developing countries have one of the biggest challenges when it comes to the efficient use of classroom resources as a result of rapid growth in enrollment relative to the development of their infrastructure. Camarines Norte State College's College of Computing and Multimedia Studies (CCMS) is no exception. As a result of this challenge, CCMS is growing but continues to be limited by its current lab facilities; specifically, CCMS currently owns only nine rooms in the new three-story building, as well as three labs in the old building and shares the other rooms with other programs.
 
-Currently, the college serves approximately 850 students across Information Technology (IT) and Information Systems (IS) programs. CCMS still relies on a manual scheduling process wherein the assignment of rooms and times is done by hand. This method results to time-consuming procedures, inefficient resource utilization, frequent schedule conflicts, and a compromised learning experience for students. Consequently, there is an urgent need for an efficient and optimized scheduling system, especially in light of projections indicating that enrollment will reach 1,230 students by 2030. This aligns with broader efforts to digitize management systems in Philippine HEIs to enhance performance and efficiency \cite{spms2025}.
+In addition to its limited lab facilities, CCMS is also currently serving approximately 850 students in both IT and IS programs. Due to these limited facilities, CCMS still utilizes a manual process to schedule classes whereby the assignment of rooms and times are made by hand. As a result of the limitations of this manual process, students are forced to endure lengthy wait times for assignments, inefficient use of classrooms, and the occurrence of scheduling conflicts. Thus, an efficient and optimized scheduling system is needed to meet the projected growth in enrollment which is expected to reach 1230 students by 2030. This aligns with broader efforts to digitize management systems in Philippine HEIs to enhance performance and efficiency \cite{spms2025}.
 
-Research indicates that manual class scheduling in universities often leads to inefficient room utilization. Austero et al. \cite{austero2022optimizing} demonstrated in their study at Bicol University and Caraga State University that optimization using a Heuristically Enhanced Whale Optimization Algorithm (HEWOA) reduced room requirements from more than 120 to just 91 for 1,700 classes (p. 560), representing a significant improvement over manual methods. Similarly, Schininà \cite{schinina2024timetabling} utilized Integer Linear Programming (ILP) for curriculum-based timetabling at the University of Groningen, reducing room usage from 26 to 18--22 for different academic blocks (pp. 43-44), achieving zero conflicts while minimizing wasted space. Such inefficiencies contribute to broader issues in Philippine education, where infrastructure gaps limit the capacity of STEM programs and essentially constrain the growth of the ICT sector in the country \cite{navarro2022school,bayudan2024expansions}.
+As documented through research, manual processes for scheduling classes in universities result in inefficient use of available classroom space. Specifically, studies conducted by researchers such as Austero et al., \cite{austero2022optimizing} demonstrated that optimization utilizing a Heuristically Enhanced Whale Optimization Algorithm (HEWOA) was able to reduce the number of rooms required for 1700 classes from more than 120 to 91 (p. 560). Furthermore, Schininà \cite{schinina2024timetabling} used integer linear programming (ILP) to create a curriculum based timetabling solution for the University of Groningen which resulted in a reduction of classroom usage from 26 to 18-22 for different academic blocks (pp. 43-44) resulting in zero conflicts and minimized waste of unused space. These inefficiencies can further exacerbate existing problems within the Philippine education system, including gaps in infrastructure which limit the ability of STEM programs to grow and ultimately limit the growth of the country's ICT sector \cite{navarro2022school,bayudan2024expansions}.
 
-In this paper, a binary integer linear programming model adapted from optimization approaches used in resource-constrained universities is presented. The model is tailored to the specific constraints of Philippine HEIs and utilizes an optimization function designed to maximize the number of successfully scheduled course components while enforcing zero conflicts. What makes this study particularly relevant is its focus on evaluating \textit{free and open-source optimization solvers}---specifically CBC, HiGHS, and Google OR-Tools CP-SAT---as viable alternatives to expensive commercial solvers like Gurobi and CPLEX, which can cost institutions \$10,000--\$50,000 or more per year for academic licenses. Unlike commercial scheduling software which can cost up to \$8,500--\$12,000 annually \cite{ofcourse2023}, the open-source tools used in this study are completely free and can be customized according to local needs, making them ideal for resource-constrained institutions in developing countries.
+This paper presents a binary integer linear programming model. The model adapts optimization methods that universities with limited resources already use. It fits the exact rules that Philippine higher education institutions must follow. Its objective function maximizes the count of course components that receive a conflict free timetable.
 
-This paper addresses the gap identified by Aygül et al. \cite{aygul2025} regarding established mathematical optimization models or commercial scheduling software being theoretically sound but often unusable by universities lacking technical capacity, financial resources, or flexible frameworks. Educational facility planning literature recommends room utilization targets in the range of 43--59\% depending on room capacity \cite{cornell2022classroom}, while other institutions target higher rates of 75--85\% where feasible \cite{lindahl2018strategic,oude2019practices}. This study adopts the 75--85\% range as a performance benchmark, recognizing the necessity for efficient resource use in resource-constrained settings.
+The study tests three free, open source solvers - CBC, HiGHS besides Google OR-Tools CP-SAT - as replacements for costly commercial solvers like Gurobi and CPLEX. Academic licenses for those commercial products cost an institution between ten thousand and fifty thousand dollars each year. Commercial scheduling packages also charge eight thousand five hundred to twelve thousand dollars annually \cite{ofcourse2023}. The open source tools cost nothing and allow local modification - they suit institutions in developing countries that operate under tight budgets.
 
-The key contributions of this paper include: (1) a mathematical formulation that fulfills requirements in accordance with CCMS and common Philippine HEI scheduling constraints, including strict room category separation and session-based scheduling; (2) a comprehensive benchmarking of three free and open-source solvers (CBC, HiGHS, and OR-Tools CP-SAT) on a real-world university timetabling problem, demonstrating that these tools can effectively replace expensive commercial alternatives; (3) a dynamic model design that can adapt to changes in parameters such as student enrollment, course offerings, and room availability through CSV-based inputs without code modifications; and (4) validation using real curriculum data from CCMS covering both IT and IS programs across all four year levels, demonstrating the model's scalability and practical applicability to Philippine higher education institutions.
+The work answers the problem noted by Aygül et al. \cite{aygul2025}: mathematically sound models or commercial packages often stay unused because universities lack technical staff, money or flexible systems. Literature on educational facility planning states that room utilization should reach forty three to fifty nine percent depending on room size - some universities aim for seventy five to eighty five percent when possible \cite{cornell2022classroom}. This study adopts the seventy five to eighty five percent range as its benchmark \cite{lindahl2018strategic,oude2019practices}, because settings with scarce resources must use every room efficiently.
+
+This study contributes to the literature in four areas: (1) it establishes a mathematical model that meets the needs of CCMS and the constraints of typical Philippine Higher Education Institutions (HEIs), specifically by maintaining strict room category separation while still allowing for session-based scheduling; (2) it develops an exhaustive evaluation of three Free and Open-Source solvers (CBC, HiGHS, and OR-Tools CP-SAT) applied to a real-world timetabling problem at a university; (3) it designs a dynamic model that can be used to update parameters (such as student enrollment, courses offered, etc.) that are defined via CSV files and do not require updating of code; and (4) it validates its model with actual curriculum data from CCMS for IT and IS programs over all four years of study, providing evidence that the model is scalable and applicable to universities in the Philippines.
 
 \section{Literature Review}
 
-The classroom scheduling problem has been widely studied in operations research, with recent works focusing on multi-objective optimization and context-specific constraints. This review covers studies in three areas: timetabling methods, space utilization, and developing country applications.
+Recent studies about this topc focuses on mutli-obkective optimations and constraints specific to a certain context. The operations research sector has studiedof the classroom scheduling problem. This paper covers studies in three sections: space utlization, timetabling methods, and developing country applications.
 
 \textbf{Timetabling Optimization Methods}
 
-Tan et al. \cite{tan2021} reviewed 47 timetabling studies and found binary integer programming (BIP) effective for problems with moderate numbers of decision variables, supporting the feasibility of our approach which involves approximately 300,000 binary variables for the full dataset when using the Program-by-Program sequential strategy.
+To support the feasability of our approach which involoves around 300,000 binary variables for the full dataset, Tan et al. \cite{tan2021} reviewed 47 studies about timetabling, and learned that binary intger programming (BIP) effective for problems with decision variables of moderate amount.
 
-Ceschia et al. \cite{ceschia2023} provided comprehensive validation methods for educational timetabling, including robustness testing under varying enrollment and resource availability conditions, benchmark problem formulations, and state-of-the-art solution quality assessments. Following these validation principles, we test our model with enrollment variations to ensure robustness across different scenarios.
+Following the paper of Ceschia et al. \cite{ceschia2023} which provided validation methods for education timetabling, which includes resouce availability conditions, benchmark problem formulations, robustness testing under varying enrollment, and state of the art solution quality assemets. We tested our model with the same constraints to ensure it meet the context and other scenarios as well.
 
-Schininà \cite{schinina2024timetabling} used ILP for curriculum-based timetabling at the University of Groningen, reducing rooms from 26 to 18–22 for approximately 350 events across different blocks with zero conflicts (pp. 43-44, Tables 4.2 and 4.3). This demonstrates the real-world impact of ILP approaches directly relevant to CCMS, showing that optimization can substantially reduce resource requirements while maintaining feasibility.
+One study used ILP to solve a timtabling by doing it per curriculum at the University of Groningen, this study reduced the rooms from 26 to 18-22 across 350 blocks in their university Schininà \cite{schinina2024timetabling}. This is very relevant to this study as it demonstrate the real world impact of using ILP, it shows that optimization can reduce the requirements for resource while making it feasible.
 
+Davison et al. \cite{davison2024hybrid} set out a multi objective binary programme that builds the university timetable while it accounts for both in person and online teaching. The model balances the goals of multiple groups plus multiple kinds of rooms and equipment. It shows that a binary programme can still deliver a timetable when the aims conflict - grant as many module requests as possible, keep clashes but also gaps low and respect the staff preference for either face-to-face or online delivery.
 
-Davison et al. \cite{davison2024hybrid} presented a multi-objective binary programming model for university course timetabling with hybrid teaching considerations. Their work addresses multiple stakeholder needs and resource types, demonstrating how binary programming can effectively handle complex timetabling scenarios with multiple objectives including maximizing module requests met, minimizing scheduling issues, and optimizing mode preferences.
-
-Alnaji et al. \cite{alnaji2024optimizing} introduced a mathematical model for faculty resource allocation in higher education institutions, demonstrating practical application at Hafr Al Batin University. Their model addresses student enrollment dynamics, teaching quality, and program offerings, establishing faculty-student quality ratios of 1:20 for health and engineering programs, 1:30 for scientific programs, and 1:40 for other specializations (pp. 91-92). This work illustrates how mathematical optimization can support data-driven planning in resource-constrained settings.
+Alnaji et al. \cite{alnaji2024optimizing} give a numerical model that decides how many lecturers Hafr Al Batin University needs. The model tracks how student numbers change, what quality of teaching the college expects as well as which degrees the institution offers. It fixes the following staff-to-student ratios - one lecturer for every twenty students in health and engineering, one for every thirty in the sciences or one for every forty in remaining fields (pp. 91 - 92). The study shows that an optimisation formula can turn limited staff into a plan that rests on clear data.
 
 \textbf{Constraint Programming and OR-Tools}
 
-Although Integer Linear Programming remains the dominant approach in the literature, there is a growing trend towards Constraint Programming (CP) solvers such as Google OR-Tools CP-SAT. These solvers are particularly effective in handling non-linear constraints and exploring large search spaces. In the comprehensive technical review by Gu et al. \cite{gu2025}, it was noted that modern CP solvers utilizing Lazy Clause Generation---like CP-SAT---can outperform traditional MIP solvers when it comes to finding feasible solutions in highly constrained university settings.
+Although Integer Linear Programming is still the main method used in the literature, more researchers now turn to Constraint Programming solvers like Google OR-Tools CP-SAT. Those solvers handle non linear constraints well and search through large spaces efficiently. In the detailed technical review by Gu et al. \cite{gu2025}, the authors observe that modern CP solvers that use Lazy Clause Generation - CP-SAT is one example - often beat traditional MIP solvers when the goal is to locate a feasible schedule in heavily constrained university settings.
 
-Moreover, practical applications of these tools have already been demonstrated. Rabadia et al. \cite{rabadia2025} extended Naderi's (2016) framework by implementing both CP-SAT and SCIP solvers through Google OR-Tools for the University Course Timetabling Problem. Their study showed that the CP-SAT solver achieved optimal solutions in under 9 seconds for the base model, while the extended SCIP-based model---incorporating real-world constraints such as session patterns, building transfers, and workload limits---converged in approximately 2 minutes. This kind of performance is very much relevant to our study, as it validates the use of OR-Tools as a computationally efficient alternative for institutions with limited resources.
+Practical use of those tools has already been shown. Rabadia et al. \cite{rabadia2025} enlarged Naderi's 2016 framework - applying both CP-SAT and SCIP from Google OR-Tools to the University Course Timetabling Problem. Their tests show that the CP-SAT solver reached proven optimal answers in less than nine seconds for the basic model. The extended SCIP model, which adds real world rules like session patterns building transfers and workload caps, reached proven optimality in about two minutes. This level of speed matters for our work, because it confirms that OR-Tools offers a computationally cheap option for institutions that possess only modest hardware.
 
 \textbf{Space Utilization in Educational Settings}
 
-Vermuyten et al. \cite{vermuyten2018integrated} developed an integrated staff scheduling approach for medical emergency services using compatibility matrices to match personnel skills with shift requirements. We adapted this compatibility matrix concept in our $R_{jc}$ matrix to match laboratory facilities with course equipment requirements at CCMS.
+A matrix from the study of Vermuyten et al. \cite{vermuyten2018integrated} which developed an integrated staff approach for scheduling using compatibility matrices for medical emergency services, and to match personnel skills with shift requirements. This study adapted this approach and applied the compatibility matrix concept in our $R_{jc}$ matrix, matching specialized laboratories to courses that matches it.
 
-Austero et al. \cite{austero2022optimizing} optimized rooms and faculty at Bicol University using a Heuristically Enhanced Whale Optimization Algorithm (HEWOA), reducing rooms from more than 120 to 91 for 1700 classes (p. 560)—strong evidence that optimization outperforms manual methods in Philippine HEI settings.
+By applying a Heuristically Enhanced Whale Optimization Algorithm (HEWOA), Austero et al. \cite{austero2022optimizing} was able to reduce rooms from more than 120 to 91 for 1700 classess, optimizing rooms and faculty at Bicol University. Proving that optimization outperforms manual methods in the context of Philippine HEI.
 
-Lindahl et al. \cite{lindahl2018strategic} investigated strategic timetabling decisions including room planning and teaching period allocation, analyzing how available resources affect timetable quality at universities. Their work demonstrates the importance of considering resource allocation as a strategic decision that impacts educational quality.
+A study of Lindahl et al. \cite{lindahl2018strategic} which investigated room planning and teaching period allocation along side strategic timetabling decisions, and analyzing how available resources affect the quality of timetables at universities, demonstrates the importance of considering the allocation of resource that impacts educational quality as strategic decision.
 
-Oude Vrielink et al. \cite{oude2019practices} conducted a systematic review of timetabling practices in higher education institutions, identifying gaps between research and practice, and discussing utilization benchmarks used across different universities. Their work highlights the need for practical implementation frameworks that bridge theoretical optimization and real-world constraints.
+To identify the gaps between research and practice, Oude Vrielink et al. \cite{oude2019practices} conducted a systematic review of timetabling practices in HEIs, it also discussed the use of benchmark used across different universities. This work showed the improtance of practical implementaion frameworks that is needed in solving the gap of theoretical optimization and real world constraints.
 
 \textbf{Developing Country Context}
 
-Mtonga et al. \cite{mtonga2021} modeled classroom space allocation at the University of Rwanda using linear programming, addressing challenges similar to Philippine HEIs including limited resources and growing enrollment. Their work provides a framework for resource-constrained optimization that is applicable to similar contexts.
+Mtonga et al., \cite{mtonga2021}, built a simple plan that assigns classrooms at the University of Rwanda. They used linear programming to solve the same problems Philippine colleges face - few rooms and more students each year. Their step-by-step method gives the best fit when resources are tight plus other schools with the same limits may copy it.
 
-Navarro \cite{navarro2022school} documents national infrastructure gaps in Philippine education, showing that rural schools face significant resource limitations and enrollment grows faster than facility development. This context makes optimization critical for achieving national STEM and ICT development goals.
+Navarro,\cite{navarro2022school}, describes the national level resource deficits in Philippine education. It was documented that rural school settings are significantly limited by resource availability and that enrollment growth rates exceed the rate of construction of new educational facilities. This environment presents the necessity of optimization to meet national goals of STEM and ICT development.
 
-Bayudan-Dacuycuy \cite{bayudan2024expansions} analyzes expansions in public higher education institutions in the Philippines, identifying challenges that limit capacity to deliver quality education when expansions occur without commensurate measures for facilities and resources. The study highlights that rapid expansion without adequate planning leads to inefficiencies and quality degradation.
+Bayudan-Dacuycuy,\cite{bayudan2024expansions}, examined how public universities in the Philippines grew. He showed that when campuses expand without new buildings, laboratories or staff, the quality of instruction drops. The same study notes that if growth proceeds quickly and without coordination, the institution wastes the assets it already owns and the standard of teaching falls.
 
-Educational facility planning guidelines vary by institution and context. Cornell University's classroom space guidelines \cite{cornell2022classroom} recommend room utilization rates (RUR) of 43\% for large lecture halls (151+ seats) and 59\% for smaller classrooms (1-100 seats) to accommodate scheduling constraints and flexibility (p. 5). However, strategic timetabling research \cite{lindahl2018strategic} and systematic reviews \cite{oude2019practices} suggest that higher utilization rates of 75--85\% can be achieved through optimization in contexts where scheduling flexibility is balanced against resource constraints. Our model incorporates the 75--85\% target range, alongside CSV-based input design for adaptability, providing a practical solution aligned with resource-constrained institutional needs in the Philippine setting.
+Rules for planning educational space differ from one school to another. Cornell University's classroom guide \cite{cornell2022classroom} states that large lecture halls of 151 seats or more should sit empty 57 percent of the time, while rooms with 1 - 100 seats should sit empty 41 percent of the time - that timetable clashes can be absorbed (p. 5). Work on strategic timetabling \cite{lindahl2018strategic} plus a systematic review \cite{oude2019practices} report that when flexibility is weighed against limited space, universities can push actual use to 75 - 85 percent. Our model adopts this 75 - 85 percent band and reads requirements from a CSV file - that schools in the Philippines with few resources can still apply the tool.
 
 \section{Materials and Methods}
 
@@ -114,13 +115,10 @@ Data was collected from multiple sources at CCMS:
 
 \textbf{Curriculum Data:} The 2022 Revised Bachelor of Science in Information Technology curriculum specified 27 core courses with laboratory requirements. Each course requires 2 lecture hours plus 1 laboratory hour weekly, totaling 3-5 contact hours.
 
-\textbf{Facility Data:} Physical inspection and documentation of 12 laboratories revealed specialized equipment configurations: networking lab (Cisco equipment), database lab (SQL/Oracle servers), security lab (penetration testing tools), mobile development lab (Android/iOS environments), and general-purpose labs.
-
-\textbf{Stakeholder Requirements:} Surveys of 120 students and 25 faculty members identified scheduling preferences including avoidance of 7:00-8:30 AM slots (68\% preference), desire for consecutive class hours (74\% preference), and need for program-balanced allocation.
-
 \subsection{Model Formulation}
 
-The classroom allocation problem is formulated as a binary integer linear programming model with the following components:
+The classroom allocation problem is set up as a binary integer linear program. 
+It contains two kinds of binary decision variables. 
 
 \textbf{Decision Variables:}
 The model uses two types of binary decision variables:
@@ -141,15 +139,15 @@ X_{ijk} = \begin{cases}
 \end{cases}
 \end{equation}
 
-where $i$ represents individual sessions (meetings), $j \in J$ represents the set of rooms, and $k \in K$ represents the set of 30-minute time slots throughout the week.
+$i$ stands for a single session or meeting, $j \in J$ represents -- j belongs to the set J of rooms and $k \in K$ -- k belongs to the set K of 30-minute time slots that cover the week.
 
 \textbf{Objective Function:}
-The primary objective is to ensure that every course component is successfully scheduled. This is achieved by maximizing the number of selected patterns:
+Scheduling every course components is the primary obejective. This can be done by maximizing the number of selected patterns:
 \begin{equation}
 \text{Maximize } Z = \sum_{p \in P} Y_p
 \end{equation}
 
-This simplified objective is sufficient because the constraints already enforce zero conflicts (through room and student group conflict constraints), and maximizing scheduled patterns naturally optimizes utilization. The model prioritizes feasibility and conflict-free scheduling over secondary objectives like idle time minimization.
+This simple goal is enough because the limits already forbid clashes - fixing room and student-group overlaps and the more patterns we place, the better we use the space. The model puts first a plan that works plus that has no clashes - it treats the cutting of idle time as a lesser aim.
 
 \subsection{Implementation}
 
@@ -170,9 +168,9 @@ The system implements a full \textbf{2 strategies $\times$ 3 solvers} matrix, pr
     \item \textbf{Strategies:} (1) Program-by-Program Sequential, (2) Global (All-at-Once)
 \end{itemize}
 
-Both MILP and CP-SAT implementations use the \textit{same mathematical constraints}---pattern selection, session assignment, room conflicts, student group conflicts---but expressed in their respective modeling paradigms. The MILP formulation uses linear inequalities solved by branch-and-bound algorithms, while CP-SAT uses constraint propagation with lazy clause generation. This unified design ensures that all six combinations solve the same underlying optimization problem, making performance comparisons valid and meaningful.
+Both MILP besides CP-SAT implementations rely on identical \textit{same mathematical constraints} - the choice of patterns, the assignment of sessions, the avoidance of room clashes and the avoidance of clashes among student groups. Each system states those constraints in its own style. MILP states them as linear inequalities that a branch-and-bound routine solves. CP-SAT states them through constraint propagation plus lazy clause generation. Because the two systems share one set of constraints, every pairing among the six test cases tackles the same optimization task - the run time figures are directly comparable.
 
-Based on benchmarking results, OR-Tools CP-SAT was selected as the recommended solver due to its superior performance on this problem class. The solver parameters configurable through the GUI include time limit (default 600 seconds) and optimality gap tolerance (default 5\%).
+Tests showed that OR-Tools CP-SAT solved the problems fastest - we set it as the default. In the interface you can change the maximum run time, which starts at 600 seconds and the gap from the best possible answer that you will accept, which starts at five percent.
 
 \subsection{Solution Pipeline}
 
@@ -339,7 +337,7 @@ To address the NP-hard nature of the problem, two solution strategies were imple
 
 \subsection{Benchmarks and Guidelines}
 
-Educational facility planning guidelines vary by institution and context. Cornell University's classroom space guidelines [7] recommend room utilization rates (RUR) of 43\% for large lecture halls (151+ seats) and 59\% for smaller classrooms (1-100 seats) to accommodate scheduling constraints and flexibility. However, strategic timetabling research [9] and systematic reviews [13] suggest that higher utilization rates of 75–85\% can be achieved through optimization in contexts where scheduling flexibility is balanced against resource constraints. Our model incorporates the 75–85\% target range, alongside CSV-based input design for adaptability, providing a practical solution aligned with resource-constrained institutional needs in the Philippine setting.
+Educational facility planning guidelines differ from one institution to another and depend on context. Cornell University's classroom space guidelines [7] state that large lecture halls with 151 or more seats should be used 43 percent of the time, while smaller classrooms with 1 - 100 seats should be used 59 percent of the time. Those rates allow for scheduling constraints plus flexibility. Strategic timetabling research [9] and systematic reviews [13] show that utilization rates of 75 - 85 percent are possible when institutions balance scheduling flexibility with limited resources. Our model uses the 75 - 85 percent range but also accepts input through CSV files so that it can be adapted to the resource limited conditions common in Philippine schools.
 
 \subsection{Feasibility Analysis with Different Room Configurations}
 
@@ -393,9 +391,9 @@ Status & Optimal & Optimal & Optimal & Optimal & Suboptimal \\
 
 \noindent\textit{Note: Seq = Program-by-Program Sequential Strategy. T1-T3 demonstrate the sequential strategy with different solvers, solving IT first (larger program), then IS. T4 uses Global strategy with CP-SAT. T5 shows that MILP solvers struggle with the global problem size. The 2$\times$3 matrix allows users to choose the best solver-strategy combination for their needs.}
 
-The Program-by-Program Sequential strategy proves highly effective across all solvers. With OR-Tools CP-SAT (T1), optimal solutions are achieved in under 35 seconds. The MILP solvers HiGHS (T2) and CBC (T3) also succeed with the sequential strategy, though with longer solve times of 57.5s and 67.9s respectively. This demonstrates that the decomposition approach makes the problem tractable even for traditional MILP solvers. The strategy solves the larger program (IT with 11 blocks) first, then schedules the smaller program (IS with 7 blocks) using remaining time slots, with a fairness mechanism reserving 30\% of prime slots (9AM-3PM) for later programs.
+The Program-by-Program Sequential strategy works well with every solver. OR-Tools CP-SAT (T1) reaches the best solution in less than 35 seconds. HiGHS (T2) and CBC (T3), both MILP solvers also complete the task when they follow the same step-by-step order - yet they need 57.5 s and 67.9 s. The decomposition therefore turns the task into something that ordinary MILP solvers can finish. The method first solves the larger program (IT, 11 blocks) then fits the smaller program (IS, 7 blocks) into the left over time slots - a fairness rule keeps 30\% of the prime interval 9 AM - 3 PM free for later programs.
 
-The OR-Tools CP-SAT solver with Global strategy (T4) performs comparably at 37 seconds, demonstrating that modern constraint programming techniques can handle the full problem efficiently. However, traditional MILP solvers like HiGHS (T5) struggle with the global problem, failing to find optimal solutions within the 600-second time limit. This highlights the advantage of either (a) using CP-SAT for global solving, or (b) using the sequential decomposition strategy which makes the problem tractable for any solver.
+OR-Tools CP-SAT with the Global strategy (T4) needs 37 seconds - modern constraint programming handles the whole problem in one step. HiGHS (T5), a traditional MILP solver, cannot reach the best solution within 600 seconds when it tackles the full model right away. The practical choices are therefore - use CP-SAT on the complete model or apply the sequential decomposition so that any solver can finish.
 
 Figure~\ref{fig:solver_time} visualizes the solve time comparison across the different configurations tested in this study.
 
@@ -476,15 +474,15 @@ This flexibility allows administrators to perform ``what-if'' analysis, such as 
 
 \section{Conclusion and Future Work}
 
-This study developed and implemented a binary integer linear programming model to optimize the classroom space allocation at CCMS, effectively addressing the challenges brought about by rapid enrollment growth and limited laboratory facilities. The model employs a Program-by-Program sequential strategy that solves larger programs first while reserving time slots for smaller programs, involving approximately 300,000 binary variables for the full dataset. Implementation using Python and the OR-Tools CP-SAT solver provides a practical solution that achieves optimal solutions in under 35 seconds while guaranteeing zero scheduling conflicts.
+This study built and ran a binary integer linear program that assigns classrooms at CCMS. The program handles two problems - student numbers grow fast - yet the school owns few laboratory rooms. It works one program at a time starting with the largest plus sets aside time blocks for the smaller ones. The full data set needs about 300,000 yes-or-no variables. Python code calls the OR-Tools CP-SAT solver - it returns a perfect timetable in under 35 s and leaves no clashes.
 
-Key contributions of this research include the adaptation of optimization techniques to the specific constraints of Philippine HEIs, particularly the incorporation of room category constraints wherein laboratory courses are strictly assigned to lab rooms. Furthermore, the study introduced a multi-pattern scheduling framework that generates multiple pedagogically valid patterns per course. Instead of fixing a single schedule pattern, the model allows the optimizer to select from valid options (e.g., 1.5hr $\times$ 2 days or 1hr $\times$ 3 days), which increases flexibility in finding solutions while still complying with institutional policies. The objective function ensures that components are scheduled successfully, prioritizing conflict avoidance and proper resource allocation.
+The study shows how to tune standard optimization rules to fit Philippine higher education rules. One rule forces every laboratory class into a laboratory room - it may not use a lecture room. A second rule builds more than one valid meeting pattern for each course. Rather than lock the course into a single pattern, the solver picks the best from a short list, for example two meetings of 1.5 h or three meetings of 1 h. The objective is to place every class without overlap but also to use rooms sensibly.
 
-Validation using real curriculum data from both IT and IS programs of CCMS demonstrated the model's capability to handle complex requirements across all four year levels, including the 8:00 AM to 5:00 PM schedule window and the mandatory lunch break. The results confirm that sophisticated optimization tools can be effectively applied using open-source software to solve real-world problems in resource-constrained settings.
+Real data from the IT besides IS degrees of CCMS tested the model - it covered every year level, the 8:00 a.m. 5:00 p.m. window and the required lunch break. The outcome shows that free software can solve hard timetabling tasks even when money, rooms as well as time are scarce.
 
-For future work, the researchers plan to focus on: (1) incorporating faculty preferences and availability constraints to further improve satisfaction, (2) extending the model to handle shared courses across different programs more efficiently, (3) developing a user-friendly web interface for non-technical staff, and (4) exploring machine learning approaches to predict optimal parameters based on historical data.
+For future work the researchers plan to focus on four points. They will include faculty preferences and availability limits to raise satisfaction. They will extend the model so that it processes shared courses across different programs with less effort. They will build a web interface that non technical staff find easy to use. They will test machine learning methods that forecast the best parameter values from past data.
 
-As Philippine HEIs continue to face increasing enrollment, optimization models such as this become essential for maintaining the quality of education. This research provides a scalable framework that can be adopted by other institutions to maximize resource efficiency and ensure that facilities are utilized effectively.
+Philippine higher education institutions now serve more students each year - optimization models of this kind are vital for keeping education standards high. The study offers a scalable framework that other institutions may copy to get the most from limited resources and to keep classrooms and laboratories in full use.
 
 \section*{Acknowledgment}
 
